--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -1,29 +1,30 @@
 body {
-    background-color: lightblue;
-  }
-  
-  h1 {
-    color: white;
-    text-align: center;
-  }
-  
-  p {
-    font-family: verdana;
-    font-size: 20px;
-  }
+  background-color: #f1f1f1;
+}
 
-  table {
-    border: 1px solid black;
-    width: 100%;
-    border-spacing: 0;
-  }
+/* p {
+  color: red;
+  margin-top: 0;
+}
+#par-gr {
+  color: green;
+}
+.white-txt {
+  color: blue!important;
+} */
 
-  th {
-    text-align: start;
-    background-color: #b3b3b3;
-    padding: 8px 4px;
-  }
+table {
+  border: 1px solid black;
+  width: 100%;
+  border-spacing: 0;
+}
 
-  * {
-    font-family: 'Poppins';
-  }
+th {
+  text-align: start;
+  background-color: #b3b3b3;
+  padding: 8px 4px;
+}
+
+* {
+  font-family: 'Poppins';
+} 
