--- a/html2/styles.css
+++ b/html2/styles.css
@@ -15,6 +15,8 @@ html, body {
    
 }
 
+
+
 .edit-cell button {
     display: inline-block;
 }
@@ -173,4 +175,20 @@ div#titulos .header {
     ul.navlist li a {
         display: block;
     }
+}
+
+#gatos {
+    text-align: center;
+}
+
+.veryCats{
+    display: inline;
+}
+
+.btn_Gatos{
+    border: 1;
+    background-color: goldenrod;
+    padding: 4px 8px;
+    cursor: pointer;
+    border-radius: 8px;    
 }
